--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "homepage": "http://mickozak.github.io/Portfolio-Website",
   "dependencies": {
     "@material-ui/core": "^3.0.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "@material-ui/icons": "^3.0.1",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-mdl": "^1.11.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
