--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "homepage": "http://mickozak.github.io/Portfolio-Website",
   "dependencies": {
-    "@material-ui/core": "^3.0.2",
+    "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-mdl": "^1.11.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-swipeable-views": "^0.12.17"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
