--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-ga": "^2.5.3",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.3.1",
     "react-swipeable-views": "^0.12.17"
